--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -207,20 +207,62 @@
   <div class="section-title">今月のお気に入りのアニメトップ5 / This month's favorite animation top5</div>
 
   <section class="anime-list">
-    <div class="anime-item" data-title="日々は過ぎれど飯うまし" data-desc="女子大生になったばかりの5人が繰り広げる<br>日常系オリジナルアニメーション。<br>おいしいもの大好き、みんなでいっぱい遊びたい、<br>勉強もちょっぴり頑張って、大学生活を思いっきり楽しもう！<br>『のんのんびより』のあっとがストーリー原案を手掛け、<br>個性豊かなキャラクターたちが<br>食べて、笑って、友情を深めていくハートフルコメディ。<br>料理の作画に定評のあるP.A.WORKSが<br>総力をあげて描く「通称PA飯」の集大成。<br>2025年4月から、飯テロ間違いなしのグルメアニメがスタート。（引用：https://hibimeshi.com）" data-img="IMG_9344.jpg">
-      <div class="anime-rank">1. 日々は過ぎれど飯うまし <span class="anime-tag">2025春・軽改</span></div>
+    <div class="anime-item" data-title="わたしが恋人になれるわけないじゃん、ムリムリ!（※ムリじゃなかった!?）" data-desc="ぼっちな中学生時代から変わるため、高校デビューを果たした甘織れな子。<br>
+    しかし根が陰キャ気質のせいで、憧れの陽キャ生活に馴染めず窒息寸前に…。<br>
+    憧れの人たちに近づくために、きょうもがんばる甘織れな子。<br>
+    だったはずが──。（引用：https://www.watanare-anime.com）" data-img="IMG_9691.jpg">
+      <div class="anime-rank">1. わたしが恋人になれるわけないじゃん、ムリムリ!（※ムリじゃなかった!?） <span class="anime-tag">2025夏・軽改</span></div>
     </div>
-    <div class="anime-item" data-title="スライム倒して300年、知らないうちにレベルMAXになってました" data-desc="女神様の計らいで不老不死の魔女となって<br>異世界に転生したアズサ。<br>過労死した前世の反省からスローライフを願い、<br>生活費の足しにと日課でスライムを倒すこと300年――。<br>気づけばレベルMAXの世界最強になっていた！...（引用：https://slime300-anime.com）" data-img="IMG_9418.jpg">
-      <div class="anime-rank">2. スライム倒して300年、知らないうちにレベルMAXになってました <span class="anime-tag">2025春・軽改</span></div>
+    <div class="anime-item" data-title="フードコートで、また明日" data-desc="放課後いつものように駅を降り、フードコートに集まった2人。「あいつだけは許せない！」と、ソシャゲのキャラクター・エイベル公爵をSNS上で叩いていた和田は、その投稿を見たファンたちによってアカウントを炎上されるが、時間が経った現在和田を叩いたファンたちは別の話題を燃やしている。<br>
+    そんなネットで叩かれた話を和田が山本に愚痴ると……？<br>（引用：https://www.foodcourtjk-anime.com/story/）" data-img="IMG_9624.jpg">
+      <div class="anime-rank">2. フードコートで、また明日 <span class="anime-tag">2025夏・漫改</span></div>
     </div>
-    <div class="anime-item" data-title="薬屋のひとりごと" data-desc="毒と薬に異常な執着を持つ薬屋の娘・猫猫と<br>謎多き美形の宦官・壬氏が<br>宮中で巻き起こるさらなる難事件へと挑んでいく。（引用：https://kusuriyanohitorigoto.jp/season2/introduction/）" data-img="mao.jpeg">
-      <div class="anime-rank">3. 薬屋のひとりごと <span class="anime-tag">2025春・軽改</span></div>
+    <div class="anime-item" data-title="青春ブタ野郎はサンタクロースの夢を見ない" data-desc="思春期特有の感情と胸に迫る人間ドラマを瑞々しく描き、<br>
+    作品を重ねるごとに新たなファンを獲得してきた「青春ブタ野郎」シリーズ。宮中で巻き起こるさらなる難事件へと挑んでいく。<br>
+    高校生の少年は大学生になり、新たな人間関係のなかで<br>
+    新たな悩みと不思議現象に向き合っていく。<br>
+    原作/鴨志田一、監督/増井壮一、構成/横谷昌宏、キャラクターデザイン/田村里美、<br>
+    アニメーション制作・CloverWorksと、実力派スタッフが再集結し、<br>
+    新たに「横浜」を舞台に加え、心を打つ物語をお贈りします。（引用：https://ao-buta.com/santa/#intro）" data-img="IMG_9675.jpg">
+      <div class="anime-rank">3. 青春ブタ野郎はサンタクロースの夢を見ない <span class="anime-tag">2025夏・軽改</span></div>
     </div>
-    <div class="anime-item" data-title="完璧すぎて可愛げがないと婚約破棄された聖女は隣国に売られる" data-desc="人々が魔物の脅威に晒されている世界では、各国にて聖女と呼ばれる女性たちが結界を作り、国民を守っていた。<br>ジルトニア王国の聖女フィリア・アデナウアーは歴代最高と言われる力を持っていたが、無表情でクールな性格ゆえに国民や両親、婚約者である第2王子のユリウスから愛されず、婚約を破棄されたうえ、隣国のパルナコルタ王国へ売られてしまう。フィリアは唯一自分を慕ってくれた妹ミアの幸せのためだと割り切って出発し、聖女が亡くなったばかりというパルナコルタにて同国の王子オスヴァルトに出迎えられる。（引用：ウィキペディア）" data-img="IMG_9433.jpg">
-      <div class="anime-rank">4. 完璧すぎて可愛げがないと婚約破棄された聖女は隣国に売られる <span class="anime-tag">2025春・軽改</span></div>
+    <div class="anime-item" data-title="サイレント・ウィッチ" data-desc="モニカ・エヴァレットは世界で唯一の無詠唱魔術の使い手であり、史上最年少の15歳で王国最高の魔術師・七賢人に選ばれる。しかし、モニカは極度の人見知りであり、無詠唱魔術も人前で話さなくていいように練習して会得したものだった。七賢人に選ばれたモニカは同期のルイス・ミラーに学園に編入して、第二王子を護衛する極秘任務を押しつけられる。<br>（引用：ウィキペディア）" data-img="IMG_9523.jpg">
+      <div class="anime-rank">4. サイレント・ウィッチ <span class="anime-tag">2025夏・軽改</span></div>
+    </div>
+    <div class="anime-item" data-title="追放者食堂へようこそ！" data-desc="クエスト失敗の責任を負わされ、超一流冒険者パーティー「銀翼の大隊」を追放された料理人・デニス。料理人としての夢だった食堂を開くため奔走する中で奴隷商に売られていた少女・アトリエと出会う。彼女の瞳の中にかつての自分を見たデニスは、持ち金をはたいてアトリエを引き取ることに。 パーティーから追放された料理人と傷を負った少女。ふたりで開く「冒険者食堂」の行方は果たして――？
+    <br>（引用：https://tsuihosha-shokudo.com/story/detail/?id=1001427）" data-img="IMG_9518.jpg">
+      <div class="anime-rank">5. 追放者食堂へようこそ！ <span class="anime-tag">2025夏・軽改</span></div>
+    </div>
+  </section>
+
+  <div class="section-title">最近のお気に入り / Latest Picks</div>
+  <section class="anime-list">
+    <div class="anime-item" data-title="日々は過ぎれど飯うまし" data-desc="女子大生になったばかりの5人が繰り広げる<br>日常系オリジナルアニメーション。<br>おいしいもの大好き、みんなでいっぱい遊びたい、<br>勉強もちょっぴり頑張って、大学生活を思いっきり楽しもう！<br>『のんのんびより』のあっとがストーリー原案を手掛け、<br>個性豊かなキャラクターたちが<br>食べて、笑って、友情を深めていくハートフルコメディ。<br>料理の作画に定評のあるP.A.WORKSが<br>総力をあげて描く「通称PA飯」の集大成。<br>2025年4月から、飯テロ間違いなしのグルメアニメがスタート。（引用：https://hibimeshi.com）" data-img="IMG_9475.jpg">
+      <div class="anime-rank">日々は過ぎれど飯うまし <span class="anime-tag">2025春・軽改</span></div>
+    </div>
+    <div class="anime-item" data-title="スライム倒して300年、知らないうちにレベルMAXになってました" data-desc="女神様の計らいで不老不死の魔女となって<br>異世界に転生したアズサ。<br>過労死した前世の反省からスローライフを願い、<br>生活費の足しにと日課でスライムを倒すこと300年――。<br>気づけばレベルMAXの世界最強になっていた！...（引用：https://slime300-anime.com）" data-img="IMG_9614.jpg">
+      <div class="anime-rank">スライム倒して300年、知らないうちにレベルMAXになってました <span class="anime-tag">2025春・軽改</span></div>
     </div>
     <div class="anime-item" data-title="忍者と殺し屋のふたりぐらし" data-desc="忍びの里から抜け出したくノ一さとこは、<br>街で行き倒れていたところを通りすがりの女子高生このはに救われる。<br>だがそれも束の間、さとこは里からの追手に見つかってしまう。<br>しかしそんな追手をあっさりと返り討ちにするこのは。<br>…なんと彼女の正体は殺し屋だったのだ！<br>世間知らずのくノ一と殺し屋女子高生の危ない共同生活がスタート！（引用：https://ninkoro.jp/story/）" data-img="IMG_9192.jpg">
-      <div class="anime-rank">5. 忍者と殺し屋のふたりぐらし <span class="anime-tag">2025春・漫改</span></div>
+      <div class="anime-rank">忍者と殺し屋のふたりぐらし <span class="anime-tag">2025春・漫改</span></div>
+    </div>
+    <div class="anime-item" data-title="Summer Pockets" data-desc="亡くなった祖母の遺品整理のために夏休みを利用して、<br>
+    鳥白島にやってきた主人公の鷹原羽依里。<br>
+    祖母の思い出の品の片付けを手伝いながら、<br>
+    初めて触れる「島の生活」に戸惑いつつも、順応していく。<br>
+    海を見つめる少女と出会った。<br>
+    不思議な蝶を探す少女と出会った。<br>
+    思い出と海賊船を探す少女と出会った。<br>
+    静かな灯台で暮らす少女と出会った。<br>
+    島で新しい仲間が出来た──<br>
+    この夏休みが終わらなければいいのにと、そう思った。（引用：https://summerpockets-anime.jp）" data-img="IMG_4390.JPG">
+      <div class="anime-rank">Summer Pockets <span class="anime-tag">2025春・ギャル改</span></div>
+    </div>
+    <div class="anime-item" data-title="薫る花は凛と咲く" data-desc="底辺男子校の都立千鳥高等学校と、由緒正しきお嬢様校の私立桔梗学園女子高等学校。<br>
+    隣接してはいるものの、両校の溝は深い。<br>
+    千鳥に通う紬凛太郎は実家のケーキ屋の手伝い中に、大量のケーキを食べる少女・和栗薫子と出会う。凛太郎を見て逃げるように店を去った薫子。<br>
+    怖がらせてしまったと後悔する凛太郎だったが、翌日彼女は凛太郎を訪ねてくる。<br>（引用：https://kaoruhana-anime.com/story/?id=1）" data-img="kaoru.jpg">
+      <div class="anime-rank">薫る花は凛と咲く <span class="anime-tag">2025春・漫改</span></div>
     </div>
   </section>
 
@@ -235,7 +277,7 @@
     </div>
   </section>
   <footer>
-    <p>Last Update: 2025.06.03</p>
+    <p>Last Update: 2025.07.15</p>
   </footer>
   <script>
     const items = document.querySelectorAll('.anime-item');
