--- a/Yui/log.html
+++ b/Yui/log.html
@@ -189,6 +189,12 @@
         <div class="version">v6.1.1</div>
         <div class="desc">モバイル版の調整</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">7.15</div>
+        <div class="version">v6.1.2</div>
+        <div class="desc">アニメページ更新と調整</div>
+      </div>
     </div>
   </div>
 
@@ -215,7 +221,8 @@
         ['フォームページを追加と調整', 'Form Page Added and adjustments'],
         ['細かなアップデート', 'Minor updates'],
         ['フッターのデザインを調整', 'Adjust footer design'],
-        ['モバイル版の調整', 'Mobile version adjustment']
+        ['モバイル版の調整', 'Mobile version adjustment'],
+        ['アニメページ更新と調整', 'Anime page update and adjustment']
       ];
 
       isJapanese = !isJapanese;
