--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -262,7 +262,7 @@
     隣接してはいるものの、両校の溝は深い。<br>
     千鳥に通う紬凛太郎は実家のケーキ屋の手伝い中に、大量のケーキを食べる少女・和栗薫子と出会う。凛太郎を見て逃げるように店を去った薫子。<br>
     怖がらせてしまったと後悔する凛太郎だったが、翌日彼女は凛太郎を訪ねてくる。<br>（引用：https://kaoruhana-anime.com/story/?id=1）" data-img="kaoru.jpg">
-      <div class="anime-rank">薫る花は凛と咲く <span class="anime-tag">2025春・漫改</span></div>
+      <div class="anime-rank">薫る花は凛と咲く <span class="anime-tag">2025夏・漫改</span></div>
     </div>
   </section>
 
