--- a/Yui/log.html
+++ b/Yui/log.html
@@ -195,6 +195,12 @@
         <div class="version">v6.1.2</div>
         <div class="desc">アニメページ更新と調整</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">7.19</div>
+        <div class="version">v6.1.3</div>
+        <div class="desc">プロフィールページの修正</div>
+      </div>
     </div>
   </div>
 
@@ -222,7 +228,8 @@
         ['細かなアップデート', 'Minor updates'],
         ['フッターのデザインを調整', 'Adjust footer design'],
         ['モバイル版の調整', 'Mobile version adjustment'],
-        ['アニメページ更新と調整', 'Anime page update and adjustment']
+        ['アニメページ更新と調整', 'Anime page update and adjustment'],
+        ['プロフィールページの修正', 'Profile page issue fixes'],
       ];
 
       isJapanese = !isJapanese;
