--- a/Yui/About.html
+++ b/Yui/About.html
@@ -66,8 +66,8 @@
 		h2 {
             position: absolute;
 		    top: 17.5%;
-		    left: 520px;
-		    transform: translateY(-50%);
+		    left: 50%;
+		    transform: translate(-270%, -50%);
 		    font-size: 24px;
 		    font-weight: bold;
             color: #696969;
