--- a/Yui/index.html
+++ b/Yui/index.html
@@ -305,7 +305,7 @@
         <div class="site-title">Weiyu｜<span style="font-size: 24px;">Official Site</span></div>
         <div class="nl">
             <a href="About.html">Profile</a>
-            <a href="sc.html">Schedule</a>
+            <a href="maintain.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
             <a href="anime.html">Anime</a>
             <!--<a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>-->
@@ -341,15 +341,15 @@
         <div class="sc">
             <h3>This month's favorite animation top5</h3>
             <ol>
-                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=42917" target="_blank">日々は過ぎれど飯うまし</a></li>
+                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=43968" target="_blank">わたしが恋人になれるわけないじゃん、ムリムリ!（※ムリじゃなかった!?）</a></li>
                 <br>
-                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=42905" target="_blank">スライム倒して300年、知らないうちにレベルMAXになってました</a></li>
+                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=44044" target="_blank">フードコートで、また明日</a></li>
                 <br>
-                <li><a href="https://www.netflix.com/browse?jbv=81712068" target="_blank">薬屋のひとりごと</a></li>
+                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=44007" target="_blank">青春ブタ野郎はサンタクロースの夢を見ない</a></li>
                 <br>
-                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=42887" target="_blank">完璧すぎて可愛げがないと婚約破棄された聖女は隣国に売られる</a></li>
+                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=43989" target="_blank">サイレント・ウィッチ</a></li>
                 <br>
-                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=42931" target="_blank">忍者と殺し屋のふたりぐらし</a></li>
+                <li><a href="https://ani.gamer.com.tw/animeVideo.php?sn=43974" target="_blank">追放者食堂へようこそ！</a></li>
             </ol>
         </div>
 
