--- a/Yui/log.html
+++ b/Yui/log.html
@@ -201,6 +201,12 @@
         <div class="version">v6.1.3</div>
         <div class="desc">プロフィールページの修正</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">8.09</div>
+        <div class="version">v6.1.4</div>
+        <div class="desc">詳細調整と更新前準備</div>
+      </div>
     </div>
   </div>
 
@@ -230,6 +236,7 @@
         ['モバイル版の調整', 'Mobile version adjustment'],
         ['アニメページ更新と調整', 'Anime page update and adjustment'],
         ['プロフィールページの修正', 'Profile page issue fixes'],
+        ['詳細調整と更新前準備', 'Detail adjustment and pre-update preparation']
       ];
 
       isJapanese = !isJapanese;
