--- a/Yui/log.html
+++ b/Yui/log.html
@@ -207,6 +207,12 @@
         <div class="version">v6.1.4</div>
         <div class="desc">詳細調整と更新前準備</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">9.04</div>
+        <div class="version">v6.1.5</div>
+        <div class="desc">細かなアップデート</div>
+      </div>
     </div>
   </div>
 
