--- a/Yui/log.html
+++ b/Yui/log.html
@@ -242,7 +242,8 @@
         ['モバイル版の調整', 'Mobile version adjustment'],
         ['アニメページ更新と調整', 'Anime page update and adjustment'],
         ['プロフィールページの修正', 'Profile page issue fixes'],
-        ['詳細調整と更新前準備', 'Detail adjustment and pre-update preparation']
+        ['詳細調整と更新前準備', 'Detail adjustment and pre-update preparation'],
+        ['細かなアップデート', 'Minor updates']
       ];
 
       isJapanese = !isJapanese;
