--- a/Yui/log.html
+++ b/Yui/log.html
@@ -213,6 +213,12 @@
         <div class="version">v6.1.5</div>
         <div class="desc">細かなアップデート</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">11.1</div>
+        <div class="version">v6.1.6</div>
+        <div class="desc">授業スケジュールの更新</div>
+      </div>
     </div>
   </div>
 
@@ -243,7 +249,8 @@
         ['アニメページ更新と調整', 'Anime page update and adjustment'],
         ['プロフィールページの修正', 'Profile page issue fixes'],
         ['詳細調整と更新前準備', 'Detail adjustment and pre-update preparation'],
-        ['細かなアップデート', 'Minor updates']
+        ['細かなアップデート', 'Minor updates'],
+        ['授業スケジュールの更新', 'Timetable update']
       ];
 
       isJapanese = !isJapanese;
