--- a/Yui/sc.html
+++ b/Yui/sc.html
@@ -16,23 +16,27 @@
             border: 2px solid black;
             padding: 5px;
         }
+        .t1 td {
+        min-width: 6em; /* 6文字分の最小幅を設定 */
+        /* または min-width: 80px; など具体的なピクセル値を設定 */
+    	}
 	</style>
 </head>
 <body>
 	<h2>ようこそ、我が課程表へ。</h2>
-	<p style="color:blue;">最終更新日: 2025.03.24</p>
+	<p style="color:blue;">最終更新日: 2025.11.01</p>
 <table class="t1" border="1" style="margin:auto;">
 	<tr><td>節次/星期</td><td>一/月</td><td>二/火</td><td>三/水</td><td>四/木</td><td>五/金</td></tr>
-	<tr><td>第一節/08:10～09:00</td><td>　</td><td>　</td><td>　</td><td>　</td><td>英文（實習）</td></tr>
-	<tr><td>第二節/09:10～10:00</td><td>　</td><td>　</td><td>資訊組織</td><td>　</td><td>英文（實習）</td></tr>
-	<tr><td>第三節/10:10～11:00</td><td>社團學習與實作</td><td>參考資源與服務</td><td>資訊組織</td><td>　</td><td>全民國防教育</td></tr>
-	<tr><td>第四節/11:10～12:00</td><td>社團學習與實作</td><td>參考資源與服務</td><td>資訊組織</td><td>　</td><td>全民國防教育</td></tr>
-	<tr><td>第五節/12:10～13:00</td><td>　</td><td>　</td><td>　</td><td>　</td><td>　</td></tr>
-	<tr><td>第六節/13:10～14:00</td><td>圖書館學統計</td><td>近代史事叢談</td><td>網路概論</td><td>　</td><td>圖書資訊傳播導論</td></tr>
-	<tr><td>第七節/14:10～15:00</td><td>圖書館學統計</td><td>近代史事叢談</td><td>網路概論</td><td>　</td><td>圖書資訊傳播導論</td></tr>
-	<tr><td>第八節/15:10～16:00</td><td>　</td><td>校園社區服務學習</td><td>　</td><td>　</td><td>英文</td></tr>
-	<tr><td>第九節/16:10～17:00</td><td>體育</td><td>校園社區服務學習</td><td>參考資源與服務（實習）</td><td>出版傳播與書業</td><td>英文</td></tr>
-	<tr><td>第十節/17:10～18:00</td><td>體育</td><td>　</td><td>參考資源與服務（實習）</td><td>出版傳播與書業</td><td>　</td></tr>
+	<tr><td>第一節/08:10～09:00</td><td>　</td><td>　</td><td>　</td><td>　</td><td> </td></tr>
+	<tr><td>第二節/09:10～10:00</td><td>　</td><td>　</td><td> </td><td>　</td><td> </td></tr>
+	<tr><td>第三節/10:10～11:00</td><td>創新出版產業概論</td><td>檔案學概論</td><td>館藏發展</td><td>　</td><td> </td></tr>
+	<tr><td>第四節/11:10～12:00</td><td>創新出版產業概論</td><td>檔案學概論</td><td>館藏發展</td><td>　</td><td> </td></tr>
+	<tr><td>第五節/12:10～13:00</td><td>　</td><td>　</td><td>民主政治</td><td>　</td><td>　</td></tr>
+	<tr><td>第六節/13:10～14:00</td><td>程式設計</td><td>程式設計（實習）</td><td>民主政治</td><td>人文及社會科學文獻</td><td> </td></tr>
+	<tr><td>第七節/14:10～15:00</td><td>程式設計</td><td>資訊組織</td><td> </td><td>人文及社會科學文獻</td><td> </td></tr>
+	<tr><td>第八節/15:10～16:00</td><td>　</td><td>資訊組織</td><td>　</td><td>　</td><td>英文</td></tr>
+	<tr><td>第九節/16:10～17:00</td><td> </td><td>資訊組織</td><td> </td><td>體育</td><td>英文</td></tr>
+	<tr><td>第十節/17:10～18:00</td><td>體育</td><td>　</td><td> </td><td>體育</td><td>　</td></tr>
 </table>
 <center>
 <p><a href="index.html" target="_self">ホームに戻る</a></p>
