--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -210,7 +210,7 @@
     <div class="anime-item" data-title="わたしが恋人になれるわけないじゃん、ムリムリ!（※ムリじゃなかった!?）" data-desc="ぼっちな中学生時代から変わるため、高校デビューを果たした甘織れな子。<br>
     しかし根が陰キャ気質のせいで、憧れの陽キャ生活に馴染めず窒息寸前に…。<br>
     憧れの人たちに近づくために、きょうもがんばる甘織れな子。<br>
-    だったはずが──。（引用：https://www.watanare-anime.com）" data-img="IMG_4944.jpg">
+    だったはずが──。（引用：https://www.watanare-anime.com）" data-img="anime/IMG_0198.jpg">
       <div class="anime-rank">1. わたしが恋人になれるわけないじゃん、ムリムリ!（※ムリじゃなかった!?） <span class="anime-tag">2025夏・軽改</span></div>
     </div>
     <div class="anime-item" data-title="フードコートで、また明日" data-desc="放課後いつものように駅を降り、フードコートに集まった2人。「あいつだけは許せない！」と、ソシャゲのキャラクター・エイベル公爵をSNS上で叩いていた和田は、その投稿を見たファンたちによってアカウントを炎上されるが、時間が経った現在和田を叩いたファンたちは別の話題を燃やしている。<br>
@@ -223,7 +223,7 @@
     新たな悩みと不思議現象に向き合っていく。<br>
     原作/鴨志田一、監督/増井壮一、構成/横谷昌宏、キャラクターデザイン/田村里美、<br>
     アニメーション制作・CloverWorksと、実力派スタッフが再集結し、<br>
-    新たに「横浜」を舞台に加え、心を打つ物語をお贈りします。（引用：https://ao-buta.com/santa/#intro）" data-img="IMG_9675.jpg">
+    新たに「横浜」を舞台に加え、心を打つ物語をお贈りします。（引用：https://ao-buta.com/santa/#intro）" data-img="anime/IMG_0160.jpg">
       <div class="anime-rank">3. 青春ブタ野郎はサンタクロースの夢を見ない <span class="anime-tag">2025夏・軽改</span></div>
     </div>
     <div class="anime-item" data-title="サイレント・ウィッチ" data-desc="モニカ・エヴァレットは世界で唯一の無詠唱魔術の使い手であり、史上最年少の15歳で王国最高の魔術師・七賢人に選ばれる。しかし、モニカは極度の人見知りであり、無詠唱魔術も人前で話さなくていいように練習して会得したものだった。七賢人に選ばれたモニカは同期のルイス・ミラーに学園に編入して、第二王子を護衛する極秘任務を押しつけられる。<br>（引用：ウィキペディア）" data-img="IMG_9523.jpg">
