--- a/Yui/ask.html
+++ b/Yui/ask.html
@@ -14,7 +14,6 @@
             line-height: 1.6;
         }
 
-        /* Banner Styles */
         .banner {
             background-color: #fff;
             padding: 12px 30px;
@@ -134,7 +133,7 @@
             Weiyu<span>|</span> 問い合わせフォーム
         </div>
         <div class="banner-right">
-            <a href="index.html">ホーム / Home</a>
+            <a href="https://weiyu-official.netlify.app">ホーム / Home</a>
         </div>
     </div>
 
