--- a/Yui/ask.html
+++ b/Yui/ask.html
@@ -165,7 +165,7 @@
         
         <input type="hidden" name="_captcha" value="true">
         <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_next" value="https://yochen16.github.io/Sites/Yui/index.html">
+        <input type="hidden" name="_next" value="https://weiyu-official.netlify.app">
         <input type="hidden" name="_subject" value="お問い合わせ From Weiyu Official Site">
 
         <button type="submit">送信</button>
